--- a/myosuite/agents/config/hydra_myochal_sb3_ppo_config.yaml
+++ b/myosuite/agents/config/hydra_myochal_sb3_ppo_config.yaml
@@ -5,7 +5,7 @@ default:
 env               :   'myoChallengeBimanual-v0' 
 algorithm         :   PPO
 seed              :   123
-n_env             :   32
+n_env             :   2
 n_eval_env        :   5
 
 # PPO object
@@ -15,7 +15,7 @@ batch_size        : 64
 gamma             : 0.99
 
 # PPO.learn function
-total_timesteps   : 150000
+total_timesteps   : 1500000
 log_interval      : 10000
 
 eval_freq : 1000000
