--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "packaging",
     "gitpython"
 ]
+[project.optional-dependencies]
+examples = ["mink[examples]; python_version > '3.9'"]
 
 [build-system]
 requires = ["setuptools>=45", "wheel"]
