--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,12 @@
 [submodule "myosuite/simhive/myo_sim"]
 	path = myosuite/simhive/myo_sim
-#	url = https://github.com/MyoHub/myo_sim.git
-        url = https://github.com/jamesheald/myo_sim.git
-        branch = arm_with_no_hand
+	url = https://github.com/MyoHub/myo_sim.git
 [submodule "myosuite/simhive/furniture_sim"]
 	path = myosuite/simhive/furniture_sim
 	url = https://github.com/vikashplus/furniture_sim.git
-        branch = master
 [submodule "myosuite/simhive/object_sim"]
 	path = myosuite/simhive/object_sim
-        url = https://github.com/vikashplus/object_sim.git
-        branch = main
+	url = https://github.com/vikashplus/object_sim.git
 [submodule "myosuite/simhive/MPL_sim"]
 	path = myosuite/simhive/MPL_sim
 	url = https://github.com/vikashplus/MPL_sim.git
