add permission in ci

--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -16,6 +16,10 @@ on:
         default: 'patch'
         required: true
 
+permissions:
+  contents: write
+  checks: write
+  pull-requests: write
 # # Upon running the following instructions
 # # > git tag 0.0.1 # or whatever version you want
 # # > git push origin --tags
