--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ name = "MyoSuite"
 dynamic = ["version"]  # Enable dynamic version
 description = "Musculoskeletal environments simulated in MuJoCo"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 license = { text = "Apache 2.0" }
 authors = [
     { name = "Vikash Kumar", email = "vikashplus@gmail.com" },
@@ -25,6 +25,7 @@ dependencies = [
     "flatten_dict",
     "h5py",
     "numpy",
+    "mujoco==3.3.0",
     "dm-control==1.0.28",
     "Pillow",
     "pink-noise-rl",
@@ -33,28 +34,20 @@ dependencies = [
 ]
 [project.optional-dependencies]
 examples = ["mink[examples]; python_version > '3.9'"]
-standard = [
-    "mujoco==3.3.0",
-]
 mjx = [
-    "mujoco>=3.3.0",
-    "jax[cuda]>=0.4.20",
-    "jaxlib>=0.4.20",
-    "brax>=0.10.0",
-    "flax>=0.8.0",
-    "optax>=0.1.7",
-    "ml-collections>=0.1.1",
-    "etils[epath]>=1.3.0",
-    "mujoco-mjx>=3.1.0",
-    "playground>=0.0.5",
-    "mediapy>=1.2.0",
-    "wandb>=0.21.0"
+    "jax[cuda]>=0.4.20; python_version >= '3.10'",
+    "jaxlib>=0.4.20; python_version >= '3.10'", 
+    "brax>=0.10.0; python_version >= '3.10'",
+    "flax>=0.8.0; python_version >= '3.10'",
+    "optax>=0.1.7; python_version >= '3.10'",
+    "ml-collections>=0.1.1; python_version >= '3.10'",
+    "etils[epath]>=1.3.0; python_version >= '3.10'",
+    "playground>=0.0.5; python_version >= '3.10'",
+    "mediapy>=1.2.0; python_version >= '3.10'",
+    "wandb>=0.21.0; python_version >= '3.10'"
 ]
 
 [dependency-groups]
-standard = [
-    "mujoco==3.3.0",
-]
 dev = [
     "pytest>=7.0.0",
     "pytest-xvfb",
@@ -63,13 +56,6 @@ dev = [
     "flake8"
 ]
 
-[tool.uv]
-conflicts = [
-    [
-        { extra = "mjx" },
-        { group = "standard" }
-    ]
-]
 
 [build-system]
 requires = ["setuptools>=45", "wheel"]
