--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -93,7 +93,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add myosuite/myosuite/version.py
+        git add myosuite/version.py
         git commit -m "chore: bump version to ${{ needs.get_next_version.outputs.new_version }}"
         git push origin main
         git push origin dev
