--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -95,8 +95,8 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add myosuite/version.py
         git commit -m "chore: bump version to ${{ needs.get_next_version.outputs.new_version }}"
-        git push origin main
-        git push origin dev
+        git push origin HEAD:main
+        git push origin HEAD:dev
 
     # 2. Use the `tag name` as `release version`
     - uses: mukunku/tag-exists-action@v1.4.0
