--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -96,6 +96,7 @@ jobs:
         git add myosuite/version.py
         git commit -m "chore: bump version to ${{ needs.get_next_version.outputs.new_version }}"
         git push origin HEAD:main
+        git fetch origin
         # Force dev to follow main exactly
         git push origin main:dev --force-with-lease
 
